feat: 增加动态校验规则变更

--- a/src/components/wk-form/form-item/index.scss
+++ b/src/components/wk-form/form-item/index.scss
@@ -1,5 +1,9 @@
 .b-form-item{
   margin-bottom: 64px;
+  &__label--required::before{
+    content: '*';
+    color: red;
+  }
   &__content{
     line-height: 40px;
     position: relative;
