--- a/src/components/calendar/index.scss
+++ b/src/components/calendar/index.scss
@@ -3,17 +3,23 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  font-size: 30px;
   &__header {
     padding: 10px 0;
     flex-shrink: 0;
     box-shadow: 0 2px 10px rgba(125, 126, 128, 0.16);
     &-title {
       text-align: center;
+      height: 88px;
+      line-height: 1;
+      font-size: 32px;
+      font-weight: 700;
     }
-    &-subtitle{
+    &-subtitle {
       font-weight: 600;
       text-align: center;
       line-height: 1;
+      font-size: 28px;
       height: 88px;
     }
   }
@@ -21,6 +27,19 @@
     flex: 1;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
+  }
+  &__footer {
+    flex-shrink: 0;
+    padding: 0 20px;
+    padding-bottom: env(safe-area-inset-bottom);
+    &--button {
+      background-color: #f44336;
+      height: 72px;
+      border-radius: 36px;
+      text-align: center;
+      color: #fff;
+      line-height: 72px;
+    }
   }
   &__weekdays {
     display: flex;
@@ -78,12 +97,15 @@
         bottom: 0;
         left: 0;
         background-color: currentColor;
-        opacity: .1;
-        content: ""
+        opacity: 0.1;
+        content: "";
       }
     }
+    &--disabled{
+      color: #c8c9cc;
+    }
   }
-  &__bottom-info{
+  &__bottom-info {
     position: absolute;
     bottom: 6px;
     right: 0;
