--- a/src/components/calendar/index.scss
+++ b/src/components/calendar/index.scss
@@ -1,24 +1,21 @@
 .calendar {
-  padding: 10px;
   display: flex;
   flex-direction: column;
   height: 100%;
   &__header {
-    padding: 10px 0;
     flex-shrink: 0;
     box-shadow: 0 2px 10px rgba(125, 126, 128, 0.16);
     &-title {
       text-align: center;
       height: 88px;
-      line-height: 1;
+      line-height: 88px;
       font-size: 32px;
       font-weight: 700;
     }
     &-subtitle {
       font-weight: 600;
       text-align: center;
-      line-height: 1;
-      font-size: 28px;
+      line-height: 88px;
       height: 88px;
     }
   }
@@ -29,7 +26,7 @@
   }
   &__footer {
     flex-shrink: 0;
-    padding: 0 20px;
+    padding: 15px;
     padding-bottom: env(safe-area-inset-bottom);
     &--button {
       background-color: #f44336;
@@ -106,7 +103,7 @@
   }
   &__bottom-info {
     position: absolute;
-    bottom: 6px;
+    bottom: 12px;
     right: 0;
     left: 0;
     font-size: 20px;
