--- a/src/components/calendar/index.scss
+++ b/src/components/calendar/index.scss
@@ -27,7 +27,7 @@
   &__footer {
     flex-shrink: 0;
     padding: 15px;
-    padding-bottom: env(safe-area-inset-bottom);
+    padding-bottom: calc(env(safe-area-inset-bottom) + 15px);
     &--button {
       background-color: #f44336;
       height: 72px;
