--- a/src/components/calendar/index.scss
+++ b/src/components/calendar/index.scss
@@ -28,7 +28,7 @@
     flex-shrink: 0;
     padding: 15px;
     padding-bottom: calc(env(safe-area-inset-bottom) + 15px);
-    &--button {
+    &-button {
       background-color: #f44336;
       height: 72px;
       border-radius: 36px;
