--- a/src/components/popup/index.scss
+++ b/src/components/popup/index.scss
@@ -24,6 +24,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0);
+  width: 50%;
+  height: 20%;
 }
 
 .popup-top {
@@ -38,6 +40,7 @@
   bottom: 0;
   left: 0;
   transform: translateY(100%);
+  height: 30%;
 }
 
 .popup-right {
@@ -96,21 +99,24 @@
 }
 
 /* 显示弹出层 */
-.popup-show .popup-mask {
-  visibility: visible;
-  opacity: 1;
-}
-
-.popup-show .popup-center {
-  transform: translate(-50%, -50%) scale(1);
-}
-
-.popup-show .popup-top,
-.popup-show .popup-bottom {
-  transform: translateY(0);
-}
-
-.popup-show .popup-right,
-.popup-show .popup-left {
-  transform: translateX(0);
+.popup-show {
+  .popup-mask {
+    visibility: visible;
+    opacity: 1;
+  }
+  .popup-center {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  .popup-top,
+  .popup-bottom {
+    transform: translateY(0);
+  }
+  .popup-top,
+  .popup-bottom {
+    transform: translateY(0);
+  }
+  .popup-right,
+  .popup-left {
+    transform: translateX(0);
+  }
 }
